crates/escalier_old_parser/src/snapshots/escalier_parser__tests__member_access.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"a.b.c;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 6,
                    },
                },
                span: 0..6,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 5,
                            },
                        },
                        span: 0..5,
                        kind: Member(
                            Member {
                                obj: Expr {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 3,
                                        },
                                    },
                                    span: 0..3,
                                    kind: Member(
                                        Member {
                                            obj: Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 1,
                                                    },
                                                },
                                                span: 0..1,
                                                kind: Ident(
                                                    Ident {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 0,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 1,
                                                            },
                                                        },
                                                        span: 0..1,
                                                        name: "a",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                            prop: Ident(
                                                Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 2,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 3,
                                                        },
                                                    },
                                                    span: 2..3,
                                                    name: "b",
                                                },
                                            ),
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                prop: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 4,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 5,
                                            },
                                        },
                                        span: 4..5,
                                        name: "c",
                                    },
                                ),
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
